# aoc

2021/: .gitignore  CMakeLists.txt  CMakeSettings.json
2021/day01/: CMakeLists.txt  main.cpp
2021/day02/: CMakeLists.txt  main.cpp
2021/day03/: CMakeLists.txt  main.cpp
2021/day04/: CMakeLists.txt  main.cpp
2021/day05/: CMakeLists.txt  main.cpp
2021/day06/: CMakeLists.txt  main.cpp
2021/day07/: CMakeLists.txt  main.cpp
2021/day08/: CMakeLists.txt  main.cpp
2021/day09/: CMakeLists.txt  main.cpp
2021/day10/: CMakeLists.txt  main.cpp
2021/include/: common.h
